# quantready-base

./: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: pypi-publish.yml  pytest.yml
quantready_base/: config.py
tests/: test_cli.py  test_config.py  test_install.py
