[tool.poetry]
name = "quantready-base"
version = "0.1.0"
description = "Publish public or private python libraries - using the modern python stack"
authors = ["Sean Kruzel <sean@closedloop.tech>"]
license = "MIT"
readme = "README.md"
packages = [{include = "quantready_base"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.3.1"
twine = "^4.0.2"
gcloud = "^0.18.3"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
